--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 <script>
-    const channel = new BroadcastChannel("vidisvalidator");
-    channel.onmessage = (event) => {
-        console.log(event);
-    };
+    // const channel = new BroadcastChannel("vidisvalidator");
+    // channel.onmessage = (event) => {
+    //     console.log(event);
+    // };
     window.onmessage = function(e) { // inside the parent
         console.log(e.data.type);
         console.log(e.data.payload);
 
        // if (event.origin !== "http://example.org:8080") return;
+       // we would test for a valid vidis source here
        if (e.data.payload){
         document.getElementById("inputtext").value = e.data.payload;
        }
@@ -24,11 +28,12 @@
     <h1>POC VIDIS Validator</h1>
     <p>
         Idee: Übertragung eine Schülerstatus ohne Server zu Serverkommunikation. 
-        <a href="validator.html" target="_blank">Vidis Seite öffnen</a>
+        
     </p>
 
     <form>
-        <input type="text" id="inputtext" value="none"></input><br />
+        Nach dem erfolgreichen Valideren steht dann hier ein JWT, der serverseitig validert werden kann.<br />
+        <input type="text" id="inputtext" value="none"></input><br /><br />
         <iframe src="validator.html" width="500" height="250"></iframe><br />
         <button type="submit">Submit</button>
     </form>
@@ -36,5 +41,5 @@
     <button onclick="">
         VIDIS Status Abfrage aus Bestellseite triggern
     </button>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
