--- a/validator.html
+++ b/validator.html
@@ -1,10 +1,14 @@
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <script>
         // const channel = new BroadcastChannel("vidisvalidator");
         // this is a jwt that would be created by the server
         var msg = {
             type: "vidis_validation",
+            status: "somestatus",
             payload: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJuYW1lIjoiSm9lIENvb2wiLCJyb2xlIjoic3R1ZGVudCIsInZlcmlmaWVkX2J5IjoiQllDIn0.1aU88S64PH7NUaWiJA8WBkUNbLLZ7eJzhvScE8OQxq8"
         }
    
@@ -28,5 +32,5 @@
         </div>
         <div id="result"></div>
       
-        
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
