--- a/validator.html
+++ b/validator.html
@@ -25,10 +25,13 @@
     </head>
     <body>
         <div id="prompt">
-            <h1>POC VIDIS Validator</h1>
+            <h1>POC VIDIS Validator im IFrame</h1>
             <button onclick="sender()">
-                Teile dein Schülerstatus mit ....
+                Teile dein Schülerstatus mit .... 
             </button>
+            <p>
+                Wenn keine Vidis Session da wäre könnte man hier noch per BroadcastChannel auf state-changes lauschen.
+            </p>
         </div>
         <div id="result"></div>
       
