--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 <script>
-    // const channel = new BroadcastChannel("vidisvalidator");
-    // channel.onmessage = (event) => {
-    //     console.log(event);
-    // };
+    const channel = new BroadcastChannel("vidisvalidator");
+    channel.onmessage = (event) => {
+        console.log(event);
+    };
     window.onmessage = function(e) { // inside the parent
         console.log(e.data.type);
         console.log(e.data.payload);
@@ -32,10 +32,10 @@
     </p>
 
     <form>
-        Nach dem erfolgreichen Valideren steht dann hier ein JWT, der serverseitig validert werden kann.<br />
+        Nach dem erfolgreichen Valideren steht dann hier ein JWT, der serverseitig validert werden kann. <br />
         <input type="text" id="inputtext" value="none"></input><br /><br />
         <iframe src="validator.html" width="500" height="250"></iframe><br />
-        <button type="submit">Submit</button>
+        <button type="submit">Erlaube aufrufender Seite dein Status zu lesen</button>
     </form>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
