--- a/validator.html
+++ b/validator.html
@@ -4,11 +4,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <script>
-        // const channel = new BroadcastChannel("vidisvalidator");
+        const channel = new BroadcastChannel("vidisLoginState");
+        channel.addEventListener("message", (event) => {
+            console.log(event.data);
+            if (event.data.loginstate == 'logged_in'){
+                document.getElementById('warn_not_logged_in').hidden = true;
+                document.getElementById('action_content').hidden = false;
+            }
+        });
         // this is a jwt that would be created by the server
         var msg = {
             type: "vidis_validation",
             status: "somestatus",
+            name: "Joe Cool",
+            validatedBy: "BayernCloudSchule", //IDP-Name
             payload: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJuYW1lIjoiSm9lIENvb2wiLCJyb2xlIjoic3R1ZGVudCIsInZlcmlmaWVkX2J5IjoiQllDIn0.1aU88S64PH7NUaWiJA8WBkUNbLLZ7eJzhvScE8OQxq8"
         }
    
@@ -26,18 +35,24 @@
     <body>
         <div id="prompt">
             <h1>POC VIDIS Validator im IFrame</h1>
+            <div id="warn_not_logged_in" >
+                Bitte melde dich in (VidisButton) Vidis an <a href="vidis.html" target="_blank">Hier klicken</a>.
+            </div>
+            <div id="action_content" >
             <button onclick="sender()">
                 Klick hier um  dein Schülerstatus mit der Seite <span id="callingSiteName"></span> zu teilen 
             </button>
             <p>
-                Wenn keine Vidis Session da wäre könnte man hier noch per BroadcastChannel auf state-changes lauschen.
+                
             </p>
+            </div>
         </div>
         <div id="result"></div>
       
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script>
             document.getElementById('callingSiteName').innerText =window.top.origin ;
+            document.getElementById('action_content').hidden = true;
             // todo smart resizing of Iframe
         </script>
     </body>
