--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         Nach dem erfolgreichen Valideren steht dann hier ein JWT, der serverseitig validert werden kann. <br />
         <input type="text" id="inputtext" value="none"></input><br /><br />
         <iframe src="validator.html" width="500" height="250"></iframe><br />
-        <button type="submit">Erlaube aufrufender Seite dein Status zu lesen</button>
+        <button type="submit">submit Form</button>
     </form>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
