--- a/validator.html
+++ b/validator.html
@@ -2,7 +2,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <style>
+        body {
+            background-color: orange;
+        }
+    </style>
     <script>
         const channel = new BroadcastChannel("vidisLoginState");
         channel.addEventListener("message", (event) => {
@@ -16,7 +20,7 @@
         var msg = {
             type: "vidis_validation",
             status: "somestatus",
-            name: "Joe Cool",
+            vidisname: "Joe Cool",
             validatedBy: "BayernCloudSchule", //IDP-Name
             payload: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJuYW1lIjoiSm9lIENvb2wiLCJyb2xlIjoic3R1ZGVudCIsInZlcmlmaWVkX2J5IjoiQllDIn0.1aU88S64PH7NUaWiJA8WBkUNbLLZ7eJzhvScE8OQxq8"
         }
